fix: adjust padding for .article-featured for consistent spacing

--- a/website-structure/css/styles.css
+++ b/website-structure/css/styles.css
@@ -165,7 +165,7 @@ nav a:focus {
 .article-featured{
 
     border-bottom: 1px solid #707070;
-    padding: 2em;
+    padding-bottom: 2em;
     margin-bottom: 2em;
    
 }
